crates/pg_syntax/tests/snapshots/postgres_regress/timetz@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMETZ_TBL VALUES ('2003-07-07 15:36:39 America/New_York');"
---
InsertStmt@0..71
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "TIMETZ_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..69
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..69
      AConst@31..69
        Sconst@31..69 "'2003-07-07 15:36:39  ..."
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

