crates/pg_syntax/tests/snapshots/postgres_regress/timetz@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"Time TZ\" FROM TIMETZ_TBL;"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..22 "\"Time TZ\""
  Whitespace@22..23 " "
  From@23..27 "FROM"
  Whitespace@27..28 " "
  RangeVar@28..38
    Ident@28..38 "TIMETZ_TBL"
  Ascii59@38..39 ";"

