crates/pg_syntax/tests/snapshots/postgres_regress/timetz@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"Seven\" FROM TIMETZ_TBL WHERE f1 > '05:06:07-07';"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..20 "\"Seven\""
  Whitespace@20..21 " "
  From@21..25 "FROM"
  Whitespace@25..26 " "
  RangeVar@26..36
    Ident@26..36 "TIMETZ_TBL"
  Whitespace@36..37 " "
  Where@37..42 "WHERE"
  Whitespace@42..43 " "
  AExpr@43..61
    ColumnRef@43..45
      Ident@43..45 "f1"
    Whitespace@45..46 " "
    Ascii62@46..47 ">"
    Whitespace@47..48 " "
    AConst@48..61
      Sconst@48..61 "'05:06:07-07'"
  Ascii59@61..62 ";"

