crates/pg_syntax/tests/snapshots/postgres_regress/timetz@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"None\" FROM TIMETZ_TBL WHERE f1 < '00:00-07';"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..19 "\"None\""
  Whitespace@19..20 " "
  From@20..24 "FROM"
  Whitespace@24..25 " "
  RangeVar@25..35
    Ident@25..35 "TIMETZ_TBL"
  Whitespace@35..36 " "
  Where@36..41 "WHERE"
  Whitespace@41..42 " "
  AExpr@42..57
    ColumnRef@42..44
      Ident@42..44 "f1"
    Whitespace@44..45 " "
    Ascii60@45..46 "<"
    Whitespace@46..47 " "
    AConst@47..57
      Sconst@47..57 "'00:00-07'"
  Ascii59@57..58 ";"

