crates/pg_syntax/tests/snapshots/postgres_regress/timetz@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS \"Ten\" FROM TIMETZ_TBL WHERE f1 >= '00:00-07';"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..18
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..18 "\"Ten\""
  Whitespace@18..19 " "
  From@19..23 "FROM"
  Whitespace@23..24 " "
  RangeVar@24..34
    Ident@24..34 "TIMETZ_TBL"
  Whitespace@34..35 " "
  Where@35..40 "WHERE"
  Whitespace@40..41 " "
  AExpr@41..57
    ColumnRef@41..43
      Ident@41..43 "f1"
    Whitespace@43..44 " "
    GreaterEquals@44..46 ">="
    Whitespace@46..47 " "
    AConst@47..57
      Sconst@47..57 "'00:00-07'"
  Ascii59@57..58 ";"

